--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,8 @@ header a{
 	text-decoration: none;
 }
 .wrapper{
-	background: rgb(70 70 70);
+	background: rgb(0,4,57);
+	background: linear-gradient(90deg, rgba(0,4,57,1) 0%, rgba(0,44,113,1) 40%, rgba(0,44,113,1) 60%, rgba(0,4,57,1) 100%);
 	padding: 10px;
 	font-size: 1.2rem;
 	color: white;
@@ -36,7 +37,6 @@ header a{
 .phone-number:hover,
 .email:hover{
 	text-decoration: underline;
-	color: rgb(0 191 255);
 }
 .wrapper li{
 	margin-left: 10px;
@@ -51,7 +51,9 @@ header a{
 	display: inline-block;
 	background-position: center;
 	background-size: cover;
-	margin-right: 5px;
+	margin-right: 10px;
+	height: 1.75rem;
+	width: 1.75rem;
 }
 .wrapper li[class]:after{
 	content: "";
@@ -65,8 +67,7 @@ header a{
 }
 .worktime:before{
 	background: url(../images/time-icon.png);
-	height: 1.5rem;
-	width: 1.5rem;
+
 }
 .worktime
 {
@@ -89,7 +90,7 @@ header a{
 .worktime:hover .worktime-wrapper:after{
 	content: "";
 	display: inline-block;
-	background: url(../images/arrowUp-icon.png);
+	background: url(../images/arrowUpWhite-icon.png);
 	background-position: center;
 	background-size: cover;
 	width: 10px;
@@ -119,17 +120,13 @@ header a{
 }
 .phone-number:before{
 	background: url(../images/phone-icon.png);
-	height: 1.5rem;
-	width: 1.5rem;
 }
 .email:before{
 	background: url(../images/email-icon.png);
-	height: 1.5rem;
-	width: 1.5rem;
 }
 .call-button{
 	padding: 10px 20px;
-	background: rgb(0,191,255);
+	background: #4aa4d6;
 	border-radius: 20px;
 	border-width: 0;
 	border: 2px solid black;
@@ -142,9 +139,13 @@ header a{
 
 .call-button:hover{
 	background: white;
-	color: rgb(0,191,255);
+	color: rgb(0,44,113);
+	box-shadow: 2px 3px 2px 1px rgba(0, 0, 0, 0.7);
 }
-.call-button:active+.call-form-wrapper{display:block;}
+/* .call-button:active+.call-form-wrapper{display:block;} */
+.call-form-wrapper.show{
+	display: block;
+}
 .call-form-wrapper{
 	display: none;
 	position: absolute;
@@ -154,15 +155,83 @@ header a{
 	width: 100%;
 	height: 100%;
 	z-index:2;
+	cursor: default;
 }
-.call-form{
+
+.call-form-block{
+	position:relative;
 	float:right;
 	clear:both;
-	min-width:500px;
 	height:100%;
 	background:white;
 	color: black !important;
 }
+.form-title{
+	display:flex;
+	justify-content: center;
+	flex-direction: column;
+	border-bottom: 1px solid rgba(150,150,150,0.5);
+	padding: 20px 0 5px 0;
+}
+.form-title p,
+.form-title h2{
+	display: flex;
+	justify-content: center;
+	padding: 5px 20px;
+}
+.call-form{
+	padding: 5px 20px;
+	display: flex;
+	flex-direction: column;
+}
+.call-form input{
+	margin-top: 20px;
+	width: 100%;
+	height: 50px;
+	padding: 0 10px;
+	font-size: 1rem;
+}
+.checkbox{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding-top: 20px;
+}
+.checkbox input{
+	height: 20px;
+	width: 20px;
+	margin: 0 5px 0 0;
+}
+.checkbox span{
+	font-size: 1rem;
+}
+.call-form-button{
+	margin-top: 20px;
+	width: 100%;
+	height: 50px;
+	background: rgb(75,180,230);
+	border: none;
+	border-radius: 5px;
+	color: white;
+	font-size: 1rem;
+}
+.exit-button{
+	content: url("../images/exit-icon.png");
+	position: absolute;
+	right: 0;
+	width: 2rem;
+	cursor: pointer;
+	background: rgb(75,180,230);
+	border-radius: 100%;
+	opacity: .5;
+	z-index:3;
+	margin:10px;
+	
+}
+.exit-button:hover{
+	opacity: 1;
+}
+
 .menu{
 	position: relative;
 	display: flex;
@@ -197,7 +266,8 @@ header a{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 0 12px;
+	padding: 5px 12px;
+	color: black;
 }
 #large-menu a{
 	height: 100%;
@@ -206,7 +276,7 @@ header a{
 	align-items: center;
 }
 #large-menu li:hover{
-	background: rgba(0,0,0,0.3);
+	background: rgba(0,44,113,0.5);
 	color: white;
 }
 #large-menu li:hover a{
@@ -246,8 +316,8 @@ header a{
 	top: 100%;
 	left: 0;
 	flex-direction: column;
-	background: gray;
-	color: white;
+	background: white;
+	color: black;
 	border: 2px solid black;
 	border-top: none;
 	min-width: 300px;
@@ -258,12 +328,10 @@ header a{
 	height: 100%;
 }
 .visa-list li{
-	padding: 2px 0;
+	padding: 5px 0;
 	border-top: 2px solid black;
 }
-.visa-list li:hover{
-	color: rgb(0,191,255) !important;
-}
+
 .polish-visa{
 	position: relative;
 	cursor: pointer;
@@ -271,7 +339,7 @@ header a{
 .polish-visa:after{
 	content: "";
 	display: inline-block;
-	background: url(../images/arrowRightWhite-icon.png);
+	background: url(../images/arrowRight-icon.png);
 	background-position: center;
 	background-size: cover;
 	width: 10px;
@@ -281,7 +349,7 @@ header a{
 .polish-visa:hover:after{
 	content: "";
 	display: inline-block;
-	background: url(../images/arrowRight-icon.png);
+	background: url(../images/arrowRightWhite-icon.png);
 	background-position: center;
 	background-size: cover;
 	width: 10px;
@@ -297,7 +365,7 @@ header a{
 	flex-direction: column;
 	top: -2px;
 	left: 100%;
-	background: gray;
+	background: white;
 	border: 2px solid black;
 	border-top: none;
 	min-width: 300px;
@@ -321,7 +389,7 @@ main{
 }
 /*footer*/
 footer{
-	background: gray;
+	background: rgba(0,4,57,1);
 	padding: 10px;
 	text-align: center;
 	color: white;
@@ -335,7 +403,13 @@ footer{
 {
 	html{font-size:14px;}
 	.wrapper,#large-menu{display: none;}
-	.menu{ display:flex; justify-content: space-between; background: rgb(70,70,70); color: white;}
+	.menu{ 
+		display:flex; 
+		justify-content: space-between; 
+		background: rgb(0,4,57);
+		background: linear-gradient(90deg, rgba(0,4,57,1) 0%, rgba(0,44,113,1) 40%, rgba(0,44,113,1) 60%, rgba(0,4,57,1) 100%);
+		color: white;
+	}
 	.menu a{color:white;}
 	#medium-menu{
 		display:flex;
