--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,7 +101,7 @@ header a{
 .worktime-list{
 	display: none;
 	position: absolute;
-	background: rgb(70, 70, 70);
+	background: rgba(0,44,113,1);
 	border: 2px solid black;
 	top: 85%;
 	flex-direction: column;
@@ -109,7 +109,6 @@ header a{
 	min-width: 250px;
 	color: white;
 	text-decoration: none;
-	padding: 2px 0;
 }
 .worktime-list li{
 	display: flex;
@@ -117,6 +116,11 @@ header a{
 	cursor: text;
 	width: 100%;
 	margin: 0;
+	padding: 2px 0;
+	border-bottom: 1px solid white;
+}
+.worktime-list li:last-child{
+	border: none !important;
 }
 .phone-number:before{
 	background: url(../images/phone-icon.png);
@@ -187,7 +191,7 @@ header a{
 .call-form input{
 	margin-top: 20px;
 	width: 100%;
-	height: 50px;
+	height: 40px;
 	padding: 0 10px;
 	font-size: 1rem;
 }
@@ -208,7 +212,7 @@ header a{
 .call-form-button{
 	margin-top: 20px;
 	width: 100%;
-	height: 50px;
+	height: 40px;
 	background: rgb(75,180,230);
 	border: none;
 	border-radius: 5px;
@@ -216,7 +220,7 @@ header a{
 	font-size: 1rem;
 }
 .exit-button{
-	content: url("../images/exit-icon.png");
+	content: url("../../images/exit-icon.png");
 	position: absolute;
 	right: 0;
 	width: 2rem;
@@ -267,7 +271,6 @@ header a{
 	justify-content: center;
 	align-items: center;
 	padding: 5px 12px;
-	color: black;
 }
 #large-menu a{
 	height: 100%;
@@ -286,6 +289,7 @@ header a{
 .visa-menu{
 	position: relative;
 	cursor: pointer;
+	color:inherit;
 }
 .visa-menu:after{
 	content: "";
@@ -326,6 +330,7 @@ header a{
 .visa-list a{
 	width: 100%;
 	height: 100%;
+	color: black;
 }
 .visa-list li{
 	padding: 5px 0;
@@ -335,6 +340,7 @@ header a{
 .polish-visa{
 	position: relative;
 	cursor: pointer;
+
 }
 .polish-visa:after{
 	content: "";
@@ -369,7 +375,7 @@ header a{
 	border: 2px solid black;
 	border-top: none;
 	min-width: 300px;
-	color: white !important;
+	color: inherit;
 }
 .burger{
 	margin-right:10px;
@@ -381,14 +387,74 @@ header a{
 }
 .burger img{
 	width: 2rem;
-	pointer-events: none;
 }
+.burger-list{
+	display: none;
+	position: absolute;
+	top:100%;
+	right: 0;
+	background: white;
+	width: 90%;
+	border: 2px solid black;
+	justify-content: left;
+	color: black;
+}
+.burger-list li{
+	width: 300px;
+	color: black;
+	padding: 5px 0px;
+}
+
 /*main*/
 main{
-	background: yellow;
+	
+}
+.visa-title{
+	display: flex;
+	align-items: center;
+	width: 100%;
+	background: lightblue;
+	padding: 30px 0 30px 10%;
+}
+.visa-title>img{
+	width: 5rem;
+}
+.visa-wrapper{
+	position: relative;
+	width: 100%;
+	padding: 50px;
+}
+.visa-block{
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	padding: 30px;
+	border-radius: 20px;
+	box-shadow: 0 0 20px 2px rgba(0,0,0,0.2);
+}
+.visa-block>div
+{
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+}
+.visa-block>div>img{
+	width: 29rem;
+	border-radius: 20px;
+}
+.visa-info{
+	padding-left: 30px;
+	font-size: 1.25rem;
+}
+.visa-info p{
+	margin-bottom: 10px;
+}
+.visa-info h3{
+	margin-bottom: 20px;
 }
 /*footer*/
 footer{
+	width: 100%;
 	background: rgba(0,4,57,1);
 	padding: 10px;
 	text-align: center;
@@ -431,6 +497,37 @@ footer{
 		top:110%;
 	}
 	.burger{display:flex;}
+	.burger-list{
+		flex-direction: column;
+	}
+	.burger-list a>li,
+	.visa-menu{
+		border-top: 1px solid gray;
+	}
+	.burger-list .phone-number,
+	.burger-list{
+		border: none;
+	}
+	.burger-list .polish-visa-list,
+	.burger-list .visa-list
+	{
+		position: relative;
+		top:0;
+		left: 10px;
+		border: none;
+	}
+	.visa-block{
+		-webkit-align-items: center;
+		flex-direction: column;
+		justify-content: center;
+	}
+	.visa-block>img{
+		width:100%;
+	}
+	.visa-info{
+		text-align: center;
+		padding: 10px 0 0 0 ;
+	}
 }
 @media(min-width: 601px)
 {
